alignment fixed

--- a/album-page.css
+++ b/album-page.css
@@ -72,11 +72,15 @@ body {
   margin: 0;
   max-width: 100%;
   height: 25vh;
+  position: relative;
 }
 
 #jumbotron-album-content {
   padding: 1vh;
   max-width: 100%;
+  max-height: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
 #jumbotron-album-img {
@@ -85,14 +89,23 @@ body {
   max-height: 220px;
   aspect-ratio: 1 / 1;
   overflow: hidden;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-inline: 1vw;
+  box-shadow: 0px 0px 25px 5px rgb(0 0 0 / 0.5);
 }
 
 #album-img {
-  height: 300px;
+  height: 250px;
   object-fit: cover;
 }
-#jumbotron-album-text {
-  flex-grow: 1;
+
+#jumbotron-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .arrow {
@@ -124,7 +137,7 @@ body {
 
 #play-section {
   max-width: 100%;
-  height: 10vh;
+  height: 8vh;
 }
 
 #album-table {
@@ -166,6 +179,10 @@ hr {
   width: 50px;
   object-fit: cover;
   overflow: hidden;
+}
+
+#currently-playing-img {
+  width: 100%;
 }
 
 ion-icon {
